# torch-machine-learning-specialization

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
c1_supervised_machine_learning_regression_classification/week2/: C1_W2_Lab05_Sklearn_GD_Soln.ipynb  C1_W2_Linear_Regression.ipynb
c1_supervised_machine_learning_regression_classification/week3/: C1_W3_Logistic_Regression.ipynb
c2_advanced_learning_algorithms/week1/: C2_W1_Assignment.ipynb  C2_W1_Lab02_CoffeeRoasting_TF.ipynb  utils.py
c2_advanced_learning_algorithms/week2/: C2_W2_Assignment.ipynb  C2_W2_Softmax_Multiclass.ipynb  utils.py
c_3_unsupervised_learning_recommenders_reinforcement_learning/week2/: C3_W2_Collaborative_RecSys_Assignment.ipynb  C3_W2_RecSysNN_Assignment.ipynb  utils.py
c_3_unsupervised_learning_recommenders_reinforcement_learning/week3/: C3_W3_A1_Assignment.ipynb  lunar_lander_model.pt  utils.py
